# SecuritySystem

./: .gitignore
app/: CMakeLists.txt  Program.cpp
lib/: Addition.h  CMakeLists.txt  Cell.cpp  Cell.h  Coordinates.cpp  Coordinates.h  DynamicPlatform.cpp  DynamicPlatform.h  Map.cpp  Map.h  Module.cpp  Module.h  NetworkModule.cpp  NetworkModule.h  Platform.cpp  Platform.h  SecuritySystem.cpp  SecuritySystem.h  Sensor.cpp  Sensor.h  Site.cpp  Site.h  Violator.cpp  Violator.h  Weapon.cpp  Weapon.h
test/: CMakeLists.txt  TestSecurity.cpp
